--- a/src/mods/frames/panels/frame-panel/frame-panel.component.html
+++ b/src/mods/frames/panels/frame-panel/frame-panel.component.html
@@ -1,6 +1,12 @@
 <div class="panel">
   <h1>{{title}}</h1>
+
   <h2>HTML</h2>
+  <pre><code class="language-html" [innerHTML]="htmlCode"></code></pre>
+
   <h2>TS</h2>
+  <pre><code class="language-ts" [innerHTML]="tsCode"></code></pre>
+
   <h2>SCSS</h2>
+  <pre><code class="language-scss" [innerHTML]="scssCode"></code></pre>
 </div>
